tests/ui/typech/generic_method_instance_call_returned_type_incomp.lm
struct A {}

impl A {
    pub fn bar<T>(self, val: T) -> T {
        return val;
    }
}

fn bar() {
    let a: A = A { };

    let _: Int32 = a.bar<Boolean>(false);
}
